--- a/templates/reservas/index.html.twig
+++ b/templates/reservas/index.html.twig
@@ -1,4 +1,4 @@
-<turbo-frame id="frame-reservas">
+<turbo-frame id="frame-reservas" >
     <div class="row justify-content-center">
         <div class="col-md-12">
             <div class="card shadow-sm border-0 rounded-4">
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="mt-3 d-flex justify-content-space-between" style="margin:20px">
-                    <button type="button" class="btn btn-primary btn-sm" style="margin-right:10px" data-action="sistema--app#abrirModalNuevaReserva" data-accion = '1' data-id = '0'>Nuevo</button>
+                    <button type="button" class="btn btn-primary btn-sm" style="margin-right:10px" data-action="click->sistema--app#abrirModalCheckin" data-id = "" data-cliente = "">Nuevo</button>
                     <a href="{{ path('app_inicio') }}" class="btn btn-danger btn-sm">Regresar</a>
                 </div>
             </div>
@@ -105,14 +105,14 @@
                                     <div class="d-flex justify-content-between align-items-center">
                                         <label for="${selectId}" class="form-label mb-0" style="font-weight: bold;">Cliente <i class="fas fa-exclamation-circle text-info" title="Crear cliente" style="" data-action="click->sistema--app#abrirModalNuevoCliente" data-accion="1"></i></label>
                                         <div class="d-flex justify-content-end align-items-center">
-                                            <div class="form-check form-check-inline">
+                                            {#<div class="form-check form-check-inline">
                                                 <input class="form-check-input" type="radio" name="tipoClienteCheckin" id="motoristaCheckin-1" value="motorista" checked>
                                                 <label class="form-check-label" for="motoristaCheckin-1" style="font-weight: normal;">Motorista</label>
                                             </div>
                                             <div class="form-check form-check-inline">
                                                 <input class="form-check-input" type="radio" name="tipoClienteCheckin" id="turistaCheckin-1" value="turista">
                                                 <label class="form-check-label" for="turistaCheckin-1" style="font-weight: normal;">Turista</label>
-                                            </div>
+                                            </div>#}
                                         </div>
                                     </div>
                                     <div class="input-group mt-1">
@@ -125,11 +125,11 @@
                                 </div>                                    
                                 <div class="col-md-2">
                                     <label for="fechaLlegada" class="form-label" style="font-weight: bold;">Fecha llegada</label>
-                                    <input type="date" id="fechaLlegada" name="fechaLlegClienteRev" class="form-control" value="" min="">
+                                    <input type="date" id="fechaLlegada" name="fechaLlegClienteRev" class="form-control" value="" min="" data-action="blur->sistema--app#recalcularFechaSalida">
                                 </div>
                                 <div class="col-md-2">
                                     <label for="horaLlegada" class="form-label" style="font-weight: bold;">Hora llegada</label>
-                                    <input type="time" id="horallegada" name="horaLlegClienteRev" class="form-control" value="" min="">
+                                    <input type="time" id="horallegada" name="horaLlegClienteRev" class="form-control" value="" min="" data-action="blur->sistema--app#recalcularFechaSalida">
                                 </div>
                                 <div class="col-md-2">
                                     <label for="fechaSalida" class="form-label" style="font-weight: bold;">Fecha salida</label>
@@ -252,21 +252,6 @@
         </div>
     </div>
 
-    <!-- Modal para buscar cliente -->
-    <div class="modal fade" id="modalBuscarClienteCheckin" data-turbo="false" data-sistema--app-target="modalBuscarClienteCheckin" tabindex="-1" aria-labelledby="modalCheckinLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-sm">
-            <div class="modal-content shadow-lg" style="box-shadow: 0 0.5rem 2rem rgba(33, 37, 41, 0.95) !important;">
-                <div class="modal-header">
-                    <h5 class="modal-title">Buscar cliente</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
-                </div>
-                <div class="modal-body">
-                    <input type="text" id="inputBuscar" class="form-control" data-action="change->sistema--app#buscarCliente" placeholder="Nombres, Apellidos, Numero...">
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- Modal para registrar servicios -->
     <div class="modal fade" id="modalNuevoServicioCheckin" data-sistema--app-target="modalNuevoServicioCheckin" tabindex="-1" aria-labelledby="modalNuevoServicioCheckinLabel" aria-hidden="true" style="margin-top:25px !important;">
         <div class="modal-dialog modal-lg">
@@ -276,6 +261,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>            
                 <div class="modal-body">
+                    <input type="hidden" id="valHorasServ" value="0" />
                     <div class="row mb-3">
                         <div class="col-md-12">
                             <label for="selectServ" class="form-label" style="font-weight: bold;">Servicio</label> 
@@ -288,11 +274,15 @@
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <div class="col-md-12">
+                        <div class="col-md-8">
                             <label for="selectHabitacionServ" class="form-label" style="font-weight: bold;">Habitación</label> 
                             <select class="form-select" id="selectHabitacionServ" name="selectHabitacionServ" data-sistema--app-target="selectHabitacionServ"  data-action="change->sistema--app#cargarHab change->sistema--app#validaBtnGuardarServicioCheckin ">
                                 <option value="">Seleccione habitación</option>                                
                             </select>
+                        </div>
+                        <div class="col-md-4">
+                            <label for="inputCantidadServicio" class="form-label" style="font-weight: bold;">Cantidad</label> 
+                            <input type="text" id="inputCantidadServicio" name="inputCantidadServicio" class="form-control" data-sistema--app-target="inputCantidadServicio" value="1">
                         </div>
                     </div>
                     <div class="row mb-3">
