--- a/templates/stock/productos.html.twig
+++ b/templates/stock/productos.html.twig
@@ -166,7 +166,7 @@
                         <input type="text" name="valEntProducto" class="form-control" id="codigoProducto" data-sistema--app-target="valEntProducto" placeholder="$ 0" style="text-align:right" readonly>
                     </div>
                     <div class="col-md-4">
-                        <label for="codigoProducto" class="form-label" style="font-weight: bold;">Valor salida</label> 
+                        <label for="codigoProducto" class="form-label" style="font-weight: bold;">Utilidad und</label> 
                         <input type="text" name="valSalProducto" class="form-control" id="codigoProducto" data-sistema--app-target="valSalProducto" placeholder="$ 0" style="text-align:right" readonly>
                     </div>
                     <div class="col-md-4">
