--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -51,6 +51,7 @@
             <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="7"><i class="fas fa-concierge-bell me-2"></i>Servicios</a></li>
             <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="5"><i class="fas fa-building me-2"></i>Compañias</a></li>
             <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="6"><i class="fas fa-id-card me-2"></i>Tipos de documentos</a></li>
+            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="14"><i class="fas fa-id-card me-2"></i>Usuarios</a></li>
           </ul>
         </li>
         <li class="nav-item">
