Creación de usuarios

--- a/templates/inicio/index.html.twig
+++ b/templates/inicio/index.html.twig
@@ -152,7 +152,7 @@
             </div>
         {% elseif pantalla == 14 %}
             <div class="row w-100 gx-4" style="padding-top: 75px;">
-                <turbo-frame id="frame-usuarios" data-sistema--app-target="frameUsuarios" src="{{ path('app_usuarios') }}" >
+                <turbo-frame id="frame-usuarios" data-sistema--app-target="frameUsuarios" src="{{ path('app_register') }}" >
                     <p align="center"><i class="fas fa-cog fa-spin mt-5"></i> Cargando usuarios</p>
                 </turbo-frame>
             </div>
